# book-md-tools

./: .gitignore  Book_Parser_Instructions  CONTRIBUTING.md  Convert_to_tab_delminated.html  Document_Processing_Coverage_Analysis.md  Header_Depth_Corrector_Versioning_Enhancement.md  InDesign Table Prep & Workflow Note (1).txt  InDesign Table Prep & Workflow Note.docx  README 2.md  README.md  TLG-80502-Castles-Crusades-Castle-Zagyg-Yggsburgh-8.25-tryvrf.md  TLG_Python_Tools_Documentation.md  Yggsburgh Converted 8.12.25 v2.txt  Yggsburgh Converted 8.12.25.docx  Yggsburgh-8.25-from Doctxt.md  Yggsburgh-8.25-from Doctxt_cleaned-v2-v1.md  Yggsburgh-8.25-from Doctxt_cleaned-v2-v1_v10_final.md.fixed.para.md  Yggsburgh-8.25-from Doctxt_toc.txt  Yggsburgh-8.25-text.txt  Yggsburgh-8.25-text_from_txt-v1.md  Yggsburgh-8.25-text_from_txt-v2.md  Yggsburgh-8.25-text_from_txt-v3.md  Yggsburgh_Complete_Project_Summary.md  Yggsburgh_Complete_Spell_Check_Final_Summary.md  Yggsburgh_File_Versioning_Summary.md  Yggsburgh_Header_Correction_Summary.md  Yggsburgh_In_Progress_8.7.25.md  Yggsburgh_In_Progress_8.7.25_CLEAN_REPORT.json  Yggsburgh_In_Progress_8.7.25_TOP_REPEATS.txt  Yggsburgh_error_list.md  advice from GPT 5  format_book_py  my-workspace-name.code-workspace  pyproject.toml  test_headers.md  test_images.md  updated instructions  yggsburgh_extracted_singlecolumn 8.11.25.promoted.md  yggsburgh_extracted_singlecolumn.md
Book of Names (Archive)/: Book of Names Tables (1).xlsx  Copilot Instruction Guide for Marking Up "Extraordinary Book of.txt  (+1 more)
Working File/: Yggsburgh_in_progress.md  (+1 more)
(+47 files in other folders)
